# pyEpiDisplay_CSE583

./: .Rhistory  .gitignore  CSE583_Crosstab_Function.py  __init__.py  environment.yml  logistic.display.ipynb  pyproject.toml
.github/workflows/: testsuite.yaml
.ipynb_checkpoints/: regress.display-checkpoint.ipynb
src/pyEpiDisplay/.ipynb_checkpoints/: logistic.display-checkpoint.py
src/pyepidisplay/: CSE583_summ_function.ipynb  CSE583_summ_function.py  RNotebook_Jiayi.ipynb  __init__.py  ci_mean.py  ci_mean_Anna.ipynb  ci_mean_Anna.py  ci_prop.py  ci_prop_Anna.ipynb  ci_prop_Anna.py  data.py  logistic.display.ipynb  logistic_display.py  regress_display.py  summ_testfunc.py  tab1.ipynb  tab1.py  tableStack.py
src/pyepidisplay/.ipynb_checkpoints/: regress.display-checkpoint.ipynb
src/pyepidisplay/datasets/: ANCdata.csv  Attitudes.csv  BP.csv  Compaq.csv  Decay.csv  Ectopic.csv  HW93.csv  IudAdmit.csv  IudDiscontinue.csv  IudFollowup.csv  Marryage.csv  Oswego.csv  Outbreak.csv  Sleep3.csv  Suwit.csv  Timing.csv  VC1to1.csv  VC1to6.csv  VCT.csv  Xerop.csv  __init__.py  rdata_summary.csv  read_speed_memory_overview.csv  read_speed_memory_summary.csv  read_speed_overview.csv  read_speed_summary.csv
tests/: test_ci_mean.py  test_ci_prop.py  test_crosstab.py  test_data.py  test_logistic_display.py  test_regress_display.py  test_summ.py  test_tab1.py  test_tablestack.py
